--- a/.github/workflows/sugon-pull-pr.yml
+++ b/.github/workflows/sugon-pull-pr.yml
@@ -13,7 +13,7 @@ jobs:
     - name: repo-sync
       uses: repo-sync/github-sync@v2
       with:
-        source_repo: "${{ secrets.BITBUCKET_URL }}"
+        source_repo: "${{ vars.PR_REPO_URL }}"
         source_branch: "*"
         destination_branch: "*"
         sync_tags: "true"
